force-app/main/default/objects/Transportation__c/Transportation__c.object-meta.xml
<CustomObject>
    <label>Transportation</label>
    <nameField>
        <label>Transportation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>