force-app/main/default/objects/Transportation__c/fields/Companies__c.field-meta.xml
<CustomField>
    <fullName>Companies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Companies</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Transportations</relationshipLabel>
    <relationshipName>Transportations</relationshipName>
    <type>Lookup</type>
</CustomField>