force-app/main/default/objects/Transportation__c/fields/Destination_Pick_on_Map__c.field-meta.xml
<CustomField>
    <fullName>Destination_Pick_on_Map__c</fullName>
    <label>Destination (Pick on Map)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>