force-app/main/default/objects/Transportation__c/fields/Drivers__c.field-meta.xml
<CustomField>
    <fullName>Drivers__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Drivers</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Transportations</relationshipLabel>
    <relationshipName>Transportations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>