force-app/main/default/objects/Transportation__c/fields/Starting_Point_Pick_on_Map__c.field-meta.xml
<CustomField>
    <fullName>Starting_Point_Pick_on_Map__c</fullName>
    <label>Starting Point (Pick on Map)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>