force-app/main/default/objects/Transportation__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>recieved</fullName>
                <default>true</default>
                <label>recieved</label>
            </value>
            <value>
                <fullName>processing</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>