force-app/main/default/objects/Transportation__c/fields/Type_of_product__c.field-meta.xml
<CustomField>
    <fullName>Type_of_product__c</fullName>
    <label>Type of product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>