force-app/main/default/objects/Transportation__c/fields/Urgent_1_10__c.field-meta.xml
<CustomField>
    <fullName>Urgent_1_10__c</fullName>
    <label>Urgent (1-10)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>